traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:13: error: not found: value MurADroite
  (getY()%2,getX(),MurADroite()) match { // On vérifie la parité de la ligne pour le sens et X pour les collisions
                   ^TraversalZigZag:30: error: not found: value MurADroite
    if (!estDosMur&&MurADroite) {
                    ^